# ESP32-P4C6-JRP-Demo

./: README.md  build_firmware.ps1  build_firmware.sh  build_gui.ps1  build_gui.sh  run_gui.ps1  run_gui.sh  setup.ps1  setup.sh
build_gui_tmp/: ESP32-P4C6-Tool.spec
build_gui_tmp/ESP32-P4C6-Tool/: Analysis-00.toc  COLLECT-00.toc  ESP32-P4C6-Tool.pkg  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  warn-ESP32-P4C6-Tool.txt  xref-ESP32-P4C6-Tool.html
docs/: flashing_guide.md  getting_started.md  hardware_overview.md  protocol.md  testing_guide.md  troubleshooting.md
docs/modules/: can.md  display.md  emmc.md  gpio.md  i2c.md  ign_ilum.md  uart.md  wifi.md  wifi_bt.md
firmware/: CMakeLists.txt  idf_component.yml  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/components/can_module/: CMakeLists.txt  can_module.c
firmware/components/display_module/: CMakeLists.txt  display_module.c  idf_component.yml
firmware/main/: CMakeLists.txt  app_main.c  idf_component.yml  protocol.c  protocol.h
firmware_c6/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware_c6/main/: CMakeLists.txt  ble_scan.c  ble_scan.h  c6_main.c
host_tool/: eim_config.toml  main.py
host_tool/config/: __init__.py  ports.py  settings.py
host_tool/protocol/: board_connection.py  commands.py
host_tool/ui/: bluetooth_panel.py  can_panel.py  display_panel.py  emmc_panel.py  flash_panel.py  gpio_panel.py  i2c_panel.py  ign_ilum_panel.py  main_window.py  port_alias_dialog.py  setup_panel.py  uart_panel.py  usb_serial_panel.py  wifi_panel.py
release/ESP32-P4C6-Tool-20260610/: README.md
(+22 files in other folders)
